<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grbl_ros</name>
  <version>0.0.16</version>
  <description>ROS2 package to interface with a GRBL serial device</description>
  <maintainer email="evanflynn.msu@gmail.com">Evan Flynn</maintainer>
  <license>MIT</license>
  <url type="website">https://flynneva.github.io/grbl_ros/</url>

  <depend>rclpy</depend>
  <depend>grbl_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>grbl_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <doc_depend>serial</doc_depend>

  <build_depend>python3-serial</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
